src/base/objects/CountryAndCode__mdt/CountryAndCode__mdt.object-meta.xml
<CustomObject>
    <description>[SFCC-396] Hold Country, Country Code and Region mapping values.</description>
    <label>CountryAndCode</label>
    <pluralLabel>CountryAndCodes</pluralLabel>
</CustomObject>