src/base/objects/CountryAndCode__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>