src/base/objects/CountryAndCode__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>