src/base/objects/CountryAndCode__mdt/fields/CountryCodeISO3__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeISO3__c</fullName>
    <label>CountryCode ISO3</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>