src/base/objects/CountryAndCode__mdt/listViews/Detailed.listView-meta.xml
<ListView>
    <fullName>Detailed</fullName>
    <columns>MasterLabel</columns>
    <columns>Country__c</columns>
    <columns>CountryCode__c</columns>
    <columns>CountryCodeISO3__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed</label>
    <language>en_US</language>
</ListView>